// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu basic 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 12px;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 12px;
}

.c2 {
  font-size: 16px;
  line-height: 1.375;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  onKeyDown={[Function]}
>
  <button
    aria-label="Open Menu"
    className="c0"
    disabled={false}
    id="test-menu"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Test Menu
      </span>
      <div
        className="c3"
      />
      <svg />
    </div>
  </button>
</div>
`;

exports[`Menu close by clicking outside 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu close by clicking outside 2`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="StyledBox-YaZNy hQeqTY"
  >
    <button
      aria-label="Close Menu"
      class="StyledButton-qbvYY jVTxhz"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ iiuQkH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT fAeuhQ"
          color="brand"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-YaZNy hQeqTY"
    >
      <button
        class="StyledButton-qbvYY ipHWmi"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-qbvYY ipHWmi"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 2
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Menu close by clicking outside 3`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .gdtSRN {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jVTxhz {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .ipHWmi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hksRZC {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jhnKhC {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kFMYKe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`Menu close on esc 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu close on tab 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu custom message 1`] = `
.c4 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c4 *[stroke*="#"],
.c4 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*="#"],
.c4 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 12px;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 12px;
}

.c2 {
  font-size: 16px;
  line-height: 1.375;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  onKeyDown={[Function]}
>
  <button
    aria-label="Abrir Menu"
    className="c0"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="button"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Test Menu
      </span>
      <div
        className="c3"
      />
      <svg
        aria-label="FormDown"
        className="c4"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu disabled 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY ipHWmi"
    disabled=""
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu navigate through suggestions and select 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu open and close on click 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu open and close on click 2`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu open and close on click 3`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="StyledBox-YaZNy hQeqTY"
  >
    <button
      aria-label="Close Menu"
      class="StyledButton-qbvYY jVTxhz"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ iiuQkH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT fAeuhQ"
          color="brand"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-YaZNy hQeqTY"
    >
      <button
        class="StyledButton-qbvYY ipHWmi"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-qbvYY hksRZC"
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 2
        </div>
      </button>
      <a
        class="StyledButton-kDOCUE kFMYKe"
        href="/test"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 3
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Menu open and close on click 4`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .gdtSRN {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jVTxhz {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .ipHWmi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hksRZC {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kFMYKe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;

exports[`Menu select an item 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu with dropAlign renders 1`] = `
<div>
  <button
    aria-label="Open Menu"
    class="StyledButton-qbvYY gdtSRN"
    id="test-menu"
    type="button"
  >
    <div
      class="StyledBox-YaZNy jyWPQv"
    >
      <span
        class="StyledText-dmaDlZ iiuQkH"
      >
        Test
      </span>
      <div
        class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
      />
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT fAeuhQ"
        color="brand"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu with dropAlign renders 2`] = `
<div
  class="StyledDrop-czaYBK ksHyTq"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="StyledBox-YaZNy hQeqTY"
  >
    <button
      aria-label="Close Menu"
      class="StyledButton-qbvYY jVTxhz"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ iiuQkH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT fAeuhQ"
          color="brand"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-YaZNy hQeqTY"
    >
      <button
        class="StyledButton-qbvYY ipHWmi"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-qbvYY ipHWmi"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-YaZNy PasVd"
        >
          Item 2
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 3`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .gdtSRN {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jVTxhz {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .ipHWmi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hksRZC {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .jhnKhC {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .edpIJr {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kFMYKe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

.ksHyTq {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top right;
  -ms-transform-origin: top right;
  transform-origin: top right;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .ksHyTq {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}"
`;
